[project]
name = "ml-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.4.0",
    "marimo>=0.15.1",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "polars[pyarrow]>=1.33.1",
    "pytest>=8.4.2",
    "python-lsp-ruff>=2.3.0",
    "python-lsp-server>=1.13.1",
    "ruff>=0.13.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sqlglot>=27.19.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.8.0",
    "websockets>=15.0.1",
]
